<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_tag" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_length"
            android:inputType="numberSigned" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_copy_hash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_copy_hash" />

    <Button
        android:id="@+id/btn_clear_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear_clipboard" />
</LinearLayout>